<resources>
    <string name="app_name">Assignment1</string>
    <string name="play">Play</string>
    <string name="paper">Paper</string>
    <string name="rock">Rock</string>
    <string name="scissors">Scissors</string>
    <string name="play_pressed">play Pressed</string>
    <string name="result">Result</string>
    <string name="your_choice">Your Choice:</string>
    <string name="computer_choice">Computer Choice</string>
    <string name="play_again">Play Again</string>
    <string name="title">Welcome\n rock-paper-scissors</string>
</resources>