<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".OutputActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:id="@+id/game_result"/>

    <TextView
        android:id="@+id/your_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_choice"/>

    <TextView
        android:id="@+id/computer_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer_choice"/>

    <Button
        android:id="@+id/play_again"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/play_again" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5" />

</LinearLayout>