<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".InputActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/Title"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_margin="10dp"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/user_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/paper"
        >
        <RadioButton
            android:id="@+id/paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/paper"/>
        <RadioButton
            android:id="@+id/rock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/rock"/>
        <RadioButton
            android:id="@+id/scissors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/scissors"/>
    </RadioGroup>

    <Button
        android:id="@+id/play_button"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/play" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5" />

</LinearLayout>